# professional-python-development-type-safety-amine-habbou-

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements.txt
data/: documents.YAML  documents.csv  documents.json  documents.xml
src/: add_example.py  document_processor.py  main.py  print_csv_df_pandas.py  process_JSON.py  process_csv.py  process_time_numpyarray_pythonlist.py  process_xml.py  process_yaml.py
src/utils/: arrange.py  average.py  count_letters.py  even.py
