[project]
name = "projectamine"
version = "0.1.0"
dependencies = [
    "pandas==2.3.2",
    "mypy==1.8.0",
    "ruff==0.13.0",
    "pre-commit==4.3.0",
    "pydantic==2.11.9",
    "pandas-stubs>=2.3.2.250926",
    "types-pyyaml>=6.0.12.20250915",
    "numpy>=2.3.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
